--- a/app/src/main/res/layout/activity_add_voice_draft_page.xml
+++ b/app/src/main/res/layout/activity_add_voice_draft_page.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorAccent"
     tools:context=".controller.main.drafts.AddVoiceDraftPage">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:padding="20dp"
         android:text="RECORD AUDIO"
+        android:fontFamily="@font/montserrat"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/white"
         android:onClick="recordAudio"
