--- a/app/src/main/res/drawable/voice_top_dialog.xml
+++ b/app/src/main/res/drawable/voice_top_dialog.xml
@@ -3,8 +3,11 @@
     <item>
 
         <shape android:shape="rectangle">
-            <corners android:radius="15dp"/>
-            <solid android:color="#FFFFFF"/>
+            <corners
+                android:topLeftRadius="20dp"
+                android:topRightRadius="20dp"/>
+
+            <solid android:color="@color/colorAccent"/>
 
 
         </shape>
