--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -14,31 +14,40 @@
         android:id="@+id/titleofscreen"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/montserrat"
+        android:gravity="center"
         android:paddingTop="10dp"
         android:text="Drafts"
-        android:gravity="center"
-        android:layout_gravity="center"
         android:textColor="@color/black"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleofscreen">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/TabLayoutDraft"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            app:tabIndicatorColor="@color/colorAccent" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/ViewPagerDraft"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
 
         </androidx.viewpager.widget.ViewPager>
@@ -49,10 +58,8 @@
         android:id="@+id/button_expandable_110_250"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="310dp"
-        android:layout_marginTop="-60dp"
         app:aebAnimDurationMillis="175"
-        app:aebButtonElevation="0dp"
+        app:aebButtonElevation="7dp"
         app:aebButtonGapDp="20dp"
         app:aebEndAngleDegree="180"
         app:aebIsSelectionMode="false"
@@ -60,6 +67,7 @@
         app:aebRippleEffect="true"
         app:aebStartAngleDegree="90"
         app:aebSubButtonSizeDp="35dp"
-         />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
