--- a/app/src/main/res/layout/play_draft_audio_dialog.xml
+++ b/app/src/main/res/layout/play_draft_audio_dialog.xml
@@ -1,149 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/your_dialog_root_element"
-    android:layout_width="400dp"
-    android:layout_gravity="center_horizontal"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/your_dialog_root_element"
+    android:layout_width="wrap_content"
+    android:layout_height="200dp"
+    android:layout_gravity="center_horizontal"
+    android:background="@drawable/white_background"
+    >
 
-<RelativeLayout
-    android:id="@+id/dialogTop"
-    android:layout_alignParentTop="true"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp">
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/voice_top_dialog"
+        app:layout_constraintBottom_toTopOf="@+id/seekbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/montserrat"
+        android:orientation="horizontal" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_centerHorizontal="true"
-        android:text="title"/>
+        android:layout_marginBottom="30dp"
+        android:gravity="center"
+        android:text="title"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/seekbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+
+    <ImageView
         android:id="@+id/cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="30dp"
-        android:layout_alignParentRight="true"
-        android:text="X"/>
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cancel"
+        tools:ignore="VectorDrawableCompat" />
 
-</RelativeLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-
-        android:alpha="0.5"
-        android:layout_below="@+id/dialogTop"
-        android:background="#c0c0c0"/>
-
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/dialogTop"
-    android:layout_marginTop="30dp"
-    android:id="@+id/seekbar_layout">
 
     <TextView
         android:id="@+id/currentTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
         android:layout_toLeftOf="@id/seekbar"
-        android:text="00:00">
-    </TextView>
+        android:text="00:00"
+        app:layout_constraintEnd_toStartOf="@+id/seekbar"
+        app:layout_constraintBottom_toTopOf="@+id/backward"
+        app:layout_constraintStart_toStartOf="parent"></TextView>
 
     <SeekBar
         android:id="@+id/seekbar"
-        android:layoutDirection="ltr"
         android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
-    </SeekBar>
+        android:layout_height="18dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:layoutDirection="ltr"
+        app:layout_constraintBottom_toTopOf="@+id/pause"
+        app:layout_constraintEnd_toStartOf="@+id/remainingTime"
+        app:layout_constraintStart_toEndOf="@+id/currentTime"></SeekBar>
 
     <TextView
         android:id="@+id/remainingTime"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
         android:layout_toRightOf="@id/seekbar"
-        android:text="00:00">
-    </TextView>
+        android:text="00:00"
+        app:layout_constraintBottom_toTopOf="@+id/forward"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/seekbar"/>
 
-</RelativeLayout>
 
-
-    <RelativeLayout
-        android:id="@+id/control_audio"
+    <ImageView
+        android:id="@+id/backward"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/seekbar_layout"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="250dp"
-        android:layout_marginLeft="30dp">
+        android:layout_centerVertical="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="2dp"
+        android:rotation="180"
+        app:layout_constraintBottom_toTopOf="@+id/delete"
+        app:layout_constraintEnd_toStartOf="@+id/pause"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_fast_forward"
+        tools:ignore="VectorDrawableCompat" />
 
-        <ImageView
-            android:id="@+id/backward"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:rotation="180"
-            app:srcCompat="@drawable/ic_fast_forward"
-            tools:ignore="VectorDrawableCompat" />
+    <ImageView
+        android:id="@+id/pause"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/delete"
+        app:layout_constraintEnd_toStartOf="@+id/forward"
+        app:layout_constraintStart_toEndOf="@+id/backward"
+        app:srcCompat="@drawable/play"
+        tools:ignore="VectorDrawableCompat" />
 
-        <ImageView
-            android:id="@+id/pause"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerHorizontal="true"
-            android:clickable="true"
-            app:srcCompat="@drawable/ic_play_button"
-            tools:ignore="VectorDrawableCompat" />
+    <ImageView
+        android:id="@+id/forward"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pause"
+        app:srcCompat="@drawable/ic_fast_backword"
+        tools:ignore="VectorDrawableCompat" />
 
-        <ImageView
-            android:id="@+id/forward"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_fast_backword"
-            tools:ignore="VectorDrawableCompat" />
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/speed"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/control_audio"
-        android:id="@+id/dialogBottom">
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="X2"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
-            android:id="@+id/speed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="X2"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="20dp"/>
-
-        <TextView
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/delete"
-            android:textColor="@color/recorder_bg"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginBottom="20dp"/>
-
-
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/delete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Delete"
+        android:fontFamily="@font/montserrat"
+        android:textStyle="bold"
+        android:textColor="@color/Error"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
