--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,8 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:orientation="vertical"
         android:padding="10dp"
-        android:orientation="vertical">
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageView
@@ -24,7 +29,6 @@
             android:layout_gravity="end"
             android:layout_margin="10dp"
             app:srcCompat="@drawable/edit_profile_icon" />
-
 
 
         <ImageView
@@ -57,18 +61,22 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:id="@+id/linearLayout4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/layout_rounded_bg"
         android:elevation="15dp"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <LinearLayout
-            android:layout_width="362dp"
+            android:layout_width="350dp"
             android:layout_height="54dp"
             android:layout_marginTop="60dp"
             android:background="@drawable/white_background"
@@ -88,12 +96,12 @@
                 android:id="@+id/socio_demo_title"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
                 android:fontFamily="@font/montserrat"
-                android:text="@string/demographic_information"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:layout_gravity="center"
+                android:text="@string/demographic_information"
                 android:textColor="#515C6F"
                 android:textSize="15sp" />
 
@@ -108,7 +116,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="362dp"
+            android:layout_width="350dp"
             android:layout_height="54dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/white_background"
@@ -128,10 +136,10 @@
                 android:id="@+id/doctor_text"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
+                android:layout_gravity="center"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:layout_gravity="center"
                 android:text="@string/doctor"
                 android:textColor="#515C6F"
                 android:textSize="15sp" />
@@ -140,13 +148,13 @@
                 android:id="@+id/doctor_text2"
                 android:layout_width="148dp"
                 android:layout_height="45dp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
-                android:textAlignment="textEnd"
                 android:paddingEnd="10dp"
-                android:layout_gravity="center"
                 android:text="@string/doctor"
+                android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
                 android:textSize="15sp"
                 tools:ignore="RtlCompat" />
@@ -162,7 +170,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="362dp"
+            android:layout_width="350dp"
             android:layout_height="54dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/white_background"
@@ -182,10 +190,10 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                android:gravity="center_vertical"
-                android:paddingStart="10dp"
                 android:layout_gravity="center"
                 android:fontFamily="@font/montserrat"
+                android:gravity="center_vertical"
+                android:paddingStart="10dp"
                 android:text="@string/language"
                 android:textColor="#515C6F"
                 android:textSize="15sp" />
@@ -194,13 +202,13 @@
                 android:id="@+id/textView3"
                 android:layout_width="117dp"
                 android:layout_height="45dp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
-                android:textAlignment="textEnd"
                 android:paddingEnd="10dp"
-                android:layout_gravity="center"
                 android:text="@string/language"
+                android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
                 android:textSize="15sp"
                 tools:ignore="RtlCompat" />
@@ -218,15 +226,16 @@
 
         <Button
             android:id="@+id/log_out_btn"
-            android:layout_width="119dp"
-            android:layout_height="36dp"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:background="#79B1B0B0"
+            android:layout_marginBottom="80dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/logout"
-            android:textColor="@color/black"
+            android:textColor="@color/colorAccent"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
