--- a/app/src/main/res/layout/voice_draft_row.xml
+++ b/app/src/main/res/layout/voice_draft_row.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-
+    android:layout_margin="5dp"
     android:background="#FFFFFF">
 
     <RelativeLayout
+        android:id="@+id/draft_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,25 +15,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-
             android:layout_weight="2"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/voiceimage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:textColor="#000000"
                 android:textSize="30sp"
-                app:srcCompat="@android:drawable/ic_media_play" />
+                app:srcCompat="@drawable/play"
+                />
 
             <TextView
                 android:id="@+id/title_audio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
                 android:layout_weight="1"
+                android:textSize="20sp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"
                 android:text="The Title of audio" />
 
         </LinearLayout>
